--- a/client.html
+++ b/client.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Medi</title>
+  <title>Clientes</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -78,7 +78,7 @@
   <section class="client_section layout_padding">
     <div class="d-flex justify-content-center">
       <h2 class="custom_heading">
-        Testimonial
+        Testimonios
       </h2>
     </div>
     <div class="container">
@@ -92,7 +92,7 @@
           <div class="carousel-item active">
             <div class="client_container layout_padding">
               <div class="img_box">
-                <img src="images/client.png" alt="">
+                <img src="images/mujer.png" alt="">
               </div>
 
               <div class="detail_box">
@@ -101,23 +101,20 @@
                     M
                   </span>
                   <span>
-                    o
+                    a
                   </span>
                   <span>
                     r
                   </span>
                   <span>
-                    s
+                    i
                   </span>
                   <span>
-                    w
+                    a
                   </span>
                 </h5>
                 <p>
-                  It is a long established fact that a reader will be distracted by the readable content of a page when
-                  looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                  distribution of
-                  letters,
+                 Soy cliente desde hace 3 años y me parece una empresa muy organizada y bonita.
                 </p>
               </div>
             </div>
@@ -125,32 +122,29 @@
           <div class="carousel-item">
             <div class="client_container layout_padding">
               <div class="img_box">
-                <img src="images/client.png" alt="">
+                <img src="images/mujer2.png" alt="">
               </div>
 
               <div class="detail_box">
                 <h5>
                   <span>
-                    M
+                    L
                   </span>
                   <span>
-                    o
+                    u
                   </span>
                   <span>
-                    r
+                    c
                   </span>
                   <span>
-                    s
+                    c
                   </span>
                   <span>
-                    w
+                    y
                   </span>
                 </h5>
                 <p>
-                  It is a long established fact that a reader will be distracted by the readable content of a page when
-                  looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                  distribution of
-                  letters,
+                  Soy cliente desde hace 5 meses y me encanta esta empresa
                 </p>
               </div>
             </div>
@@ -158,32 +152,29 @@
           <div class="carousel-item">
             <div class="client_container layout_padding">
               <div class="img_box">
-                <img src="images/client.png" alt="">
+                <img src="images/hombre.png" alt="">
               </div>
 
               <div class="detail_box">
                 <h5>
                   <span>
-                    M
+                    F
                   </span>
                   <span>
-                    o
+                    e
                   </span>
                   <span>
-                    r
+                    l
                   </span>
                   <span>
-                    s
+                    i
                   </span>
                   <span>
-                    w
+                    x
                   </span>
                 </h5>
                 <p>
-                  It is a long established fact that a reader will be distracted by the readable content of a page when
-                  looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                  distribution of
-                  letters,
+                  Soy cliente desde hace 5 años y es el mejor trato que te pueden dar.
                 </p>
               </div>
             </div>
@@ -212,10 +203,9 @@
               <img src="images/location-white.png" alt="" />
             </div>
             <div class="detail-box">
-              <p>
-                It is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem
-              </p>
+                <p>
+                    Estamos ubicados en un campo cerca de Monserrate
+                </p>
             </div>
           </div>
         </a>
@@ -225,9 +215,9 @@
               <img src="images/envelope-white.png" alt="" />
             </div>
             <div class="detail-box">
-              <p>
-                demo@gmail.com
-              </p>
+                <p>
+                    Floresitas@gmail.com.co
+                </p>
             </div>
           </div>
         </a>
@@ -237,9 +227,9 @@
               <img src="images/telephone-white.png" alt="" />
             </div>
             <div class="detail-box">
-              <p>
-                +02 1234567890
-              </p>
+                <p>
+                    +57 109876543
+                </p>
             </div>
           </div>
         </a>
