--- a/about.html
+++ b/about.html
@@ -81,11 +81,10 @@
       <div class="container">
         <div class="detail">
           <h2 class="custom_heading">
-            About Us
+            Sobre nosotros
           </h2>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of g it
+            Flores naturales
           </p>
           <div>
             <a href="">
@@ -95,8 +94,7 @@
         </div>
         <div class="detail-2">
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of g it
+           Tienes descuento luego de 3 compras
           </p>
         </div>
       </div>
@@ -123,10 +121,9 @@
               <img src="images/location-white.png" alt="" />
             </div>
             <div class="detail-box">
-              <p>
-                It is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem
-              </p>
+                <p>
+                    Estamos ubicados en un campo cerca de Monserrate
+                </p>
             </div>
           </div>
         </a>
@@ -136,9 +133,9 @@
               <img src="images/envelope-white.png" alt="" />
             </div>
             <div class="detail-box">
-              <p>
-                demo@gmail.com
-              </p>
+                <p>
+                    Floresitas@gmail.com.co
+                </p>
             </div>
           </div>
         </a>
@@ -148,9 +145,9 @@
               <img src="images/telephone-white.png" alt="" />
             </div>
             <div class="detail-box">
-              <p>
-                +02 1234567890
-              </p>
+                <p>
+                    +57 109876543
+                </p>
             </div>
           </div>
         </a>
