--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Medi</title>
+  <title>Contactanos</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -85,25 +85,25 @@
       <div class="col-md-6">
         <div class="d-flex mb-4 ml-4 ml-md-0">
           <h2 class="custom_heading text-center">
-            CONTACT US
+            Contactanos
           </h2>
         </div>
         <form action="">
           <div>
-            <input type="text" placeholder="Name" />
+            <input type="text" placeholder="Nombre" />
           </div>
           <div>
             <input type="email" placeholder="Email" />
           </div>
           <div>
-            <input type="text" placeholder="Pone Number" />
+            <input type="text" placeholder="numero" />
           </div>
           <div>
-            <input type="text" class="message-box" placeholder="Message" />
+            <input type="text" class="message-box" placeholder="mensaje" />
           </div>
           <div class="d-flex justify-content-center mt-4 ">
             <button>
-              SEND
+              enviar
             </button>
           </div>
         </form>
@@ -130,10 +130,9 @@
               <img src="images/location-white.png" alt="" />
             </div>
             <div class="detail-box">
-              <p>
-                It is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem
-              </p>
+                <p>
+                    Estamos ubicados en un campo cerca de Monserrate
+                </p>
             </div>
           </div>
         </a>
@@ -143,9 +142,9 @@
               <img src="images/envelope-white.png" alt="" />
             </div>
             <div class="detail-box">
-              <p>
-                demo@gmail.com
-              </p>
+                <p>
+                    Floresitas@gmail.com.co
+                </p>
             </div>
           </div>
         </a>
@@ -155,9 +154,9 @@
               <img src="images/telephone-white.png" alt="" />
             </div>
             <div class="detail-box">
-              <p>
-                +02 1234567890
-              </p>
+                <p>
+                    +57 109876543
+                </p>
             </div>
           </div>
         </a>
