--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Medi</title>
+  <title>Product</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -81,22 +81,28 @@
   <section class="product_section layout_padding">
     <div class="d-flex justify-content-center">
       <h2 class="custom_heading">
-        Our Products
+        Nuestros productos
       </h2>
     </div>
     <div class="container layout_padding2">
-      <div class="img-box box-1">
-        <img src="images/p-1.jpg" alt="">
-      </div>
-      <div class="img-box box-2">
-        <img src="images/p-2.jpg" alt="">
-      </div>
-      <div class="img-box box-3">
-        <img src="images/p-3.jpg" alt="">
-      </div>
-      <div class="img-box box-4">
-        <img src="images/p-4.jpg" alt="">
-      </div>
+        <div class="img-box box-1">
+            <img src="images/flor1.jpg" alt="">
+        </div>
+        <div class="img-box box-2">
+            <img src="images/flor2.jpg" alt="">
+        </div>
+        <div class="img-box box-3">
+            <img src="images/flor3.jpg" alt="">
+        </div>
+        <div class="img-box box-4">
+            <img src="images/flor4.jpg" alt="">
+        </div>
+        <div class="img-box box-1">
+            <img src="images/flor5.jpg" alt="">
+        </div>
+        <div class="img-box box-2">
+            <img src="images/flor6.jpg" alt="">
+        </div>
     </div>
     <div class="d-flex justify-content-center">
       <a href="">
@@ -124,10 +130,9 @@
               <img src="images/location-white.png" alt="" />
             </div>
             <div class="detail-box">
-              <p>
-                It is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem
-              </p>
+                <p>
+                    Estamos ubicados en un campo cerca de Monserrate
+                </p>
             </div>
           </div>
         </a>
@@ -137,9 +142,9 @@
               <img src="images/envelope-white.png" alt="" />
             </div>
             <div class="detail-box">
-              <p>
-                demo@gmail.com
-              </p>
+                <p>
+                    Floresitas@gmail.com.co
+                </p>
             </div>
           </div>
         </a>
@@ -149,9 +154,9 @@
               <img src="images/telephone-white.png" alt="" />
             </div>
             <div class="detail-box">
-              <p>
-                +02 1234567890
-              </p>
+                <p>
+                    +57 109876543
+                </p>
             </div>
           </div>
         </a>
